vlib/v/checker/tests/comptime_else_compile_error_no_return.out
vlib/v/checker/tests/comptime_else_compile_error_no_return.vv:5:3: error: not an int
    3 |         return val
    4 |     } $else {
    5 |         $compile_error('not an int')
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    6 |     }
    7 | }
called from vlib/v/checker/tests/comptime_else_compile_error_no_return.vv:11:2
    9 | fn main() {
   10 |     onlyint(7)
   11 |     onlyint([]int{})
      |     ~~~~~~~~~~~~~~~~
   12 | }
