vlib/v/checker/tests/comptime_else_compile_error_no_return.vv
fn onlyint[T](val T) T {
	$if val is $int {
		return val
	} $else {
		$compile_error('not an int')
	}
}

fn main() {
	onlyint(7)
	onlyint([]int{})
}
